Geometry nodes crash #88934

Closed
opened 2021-06-07 22:20:53 +02:00 by T · 10 comments

System Information
Operating system: Windows 10
Graphics card: nVidia 2060

Blender Version
3.0.0 Alpha

Exact steps for others to reproduce the error
The error occurs with a couple of simple steps.

Create a Geometry node layout on the default cube. Input > Line > Output
If you disconnect the Line node, then reconnect to the Lines Count input. Blender will close.

**System Information** Operating system: Windows 10 Graphics card: nVidia 2060 **Blender Version** 3.0.0 Alpha **Exact steps for others to reproduce the error** The error occurs with a couple of simple steps. Create a Geometry node layout on the default cube. **Input > Line > Output** If you disconnect the Line node, then reconnect to the Lines *Count* input. Blender will close.
Author

Added subscriber: @Sir_Scofferoff

Added subscriber: @Sir_Scofferoff

#88949 was marked as duplicate of this issue

#88949 was marked as duplicate of this issue
T changed title from Geometry nodes crash and failure to load. to Geometry nodes crash 2021-06-07 22:21:44 +02:00

Added subscriber: @erik85

Added subscriber: @erik85

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
BKE_id_material_eval_ensure_default_slot(&mesh->id);

could be replaced with

  if (mesh) {
    BKE_id_material_eval_ensure_default_slot(&mesh->id);
  }

in node_geo_mesh_primitive_line.cc. But not sure if that really is the problem. Maybe a node connected in the wrong slot shouldn't trigger this at all. (but MSVC does warn that the code is dereferencing a null pointer)

``` BKE_id_material_eval_ensure_default_slot(&mesh->id); ``` could be replaced with ``` if (mesh) { BKE_id_material_eval_ensure_default_slot(&mesh->id); } ``` in `node_geo_mesh_primitive_line.cc`. But not sure if that really is the problem. Maybe a node connected in the wrong slot shouldn't trigger this at all. (but MSVC does warn that the code is dereferencing a null pointer)
Member

Added subscribers: @lowpolysaac, @PratikPB2123

Added subscribers: @lowpolysaac, @PratikPB2123

This issue was referenced by a2ebbeb836

This issue was referenced by a2ebbeb836ae765e98daaf502d49f545f43916fd
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-06-08 15:28:03 +02:00
Author

Removed subscriber: @Sir_Scofferoff

Removed subscriber: @Sir_Scofferoff
Author

Added subscriber: @Sir_Scofferoff

Added subscriber: @Sir_Scofferoff
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88934
No description provided.